--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- Open Graph data -->
 	<meta property="og:title" content="it's a(door)able">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://ncase.me/door/">
+	<meta property="og:url" content="https://test.66619.eu.org">
 	<meta property="og:image" content="http://ncase.me/door/thumbnail.png">
 	<meta property="og:description" content="a one-minute minigame.">
 	<meta property="og:site_name" content="it's a(door)able">
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-	<div id="loading"><div>LOADING</div></div>
+	<div id="loading"><div>等会，马上来</div></div>
 
 	<div id="whole_container">
 
@@ -53,7 +53,7 @@
 		<div id="screen_three">
 
 			<div id="bottom">
-				<a href="https://twitter.com/ncasenmare">made by @ncasenmare</a>
+				<a href="https://twitter.com/ncasenmare">made by @ncasenmare，edited by @619.</a>
 				|
 				<a href="https://github.com/ncase/door">open source code</a>
 			</div>
