--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-	<div id="loading"><div>等会，马上来</div></div>
+	<div id="loading"><div>等亿下下...</div></div>
 
 	<div id="whole_container">
 
@@ -43,8 +43,8 @@
 				<canvas id="canvas_3" width="300" height="380" style="margin:0"></canvas>
 				
 				<div id="valentines_text"></div>
-				<div id="rewind_text">rewinding...</div>
-				<div id="replay_text">playing back...</div>
+				<div id="rewind_text">看看你是怎么做到的...</div>
+				<div id="replay_text">把ta得路线画出来...</div>
 
 			</div>
 		</div>
