--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 
 	<!-- Place this data between the <head> tags of your website -->
-	<title>it's a(door)able</title>
+	<title>It's a(door)able</title>
 	<meta name="description" content="a one-minute minigame."/>
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- Schema.org markup for Google+ -->
-	<meta itemprop="name" content="it's a(door)able">
+	<meta itemprop="name" content="It's a(door)able">
 	<meta itemprop="description" content="a one-minute minigame.">
 	<meta itemprop="image" content="http://ncase.me/door/thumbnail.png">
 
