--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				
 				<div id="valentines_text"></div>
 				<div id="rewind_text">看看你是怎么做到的...</div>
-				<div id="replay_text">把ta得路线画出来...</div>
+				<div id="replay_text">把你的路线画出来...</div>
 
 			</div>
 		</div>
