--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<!-- Place this data between the <head> tags of your website -->
-	<title>It's a(door)able</title>
+	<title>It's a(door)able-zh</title>
 	<meta name="description" content="a one-minute minigame."/>
 	<link rel="icon" type="image/png" href="favicon.png">
 
@@ -53,7 +53,7 @@
 		<div id="screen_three">
 
 			<div id="bottom">
-				<a href="https://twitter.com/ncasenmare">made by @ncasenmare，edited by @619.</a>
+				<a href="https://twitter.com/ncasenmare">made by @ncasenmare,edited by @619.</a>
 				|
 				<a href="https://github.com/ncase/door">open source code</a>
 			</div>
